// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TokensVerticalList /> > renders correctly and matches snapshot for left position 1`] = `
<div
  className="flex flex-col flex-1 mobile:p-0 mobile:border-0 pr-10 border-r-[3px] border-[#1F1D23]"
>
  HorizontalToken
  HorizontalToken
</div>
`;

exports[`<TokensVerticalList /> > renders correctly and matches snapshot for right position 1`] = `
<div
  className="flex flex-col flex-1 mobile:p-0 mobile:border-0 pl-10"
>
  HorizontalToken
  HorizontalToken
</div>
`;
